Added 'info' level logging to AuditLog so we can easily monitor user actions.